# spritely

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  build.sh  build.zig  build.zig.zon  clean.sh  compile_commands.json  contributing.md  index.js  index.wasm  makefile  spritely.js
.github/workflows/: build-and-deploy.yml
assets/palette/: palette.cfg  palette_test.cfg
examples/: index.data  index.wasm  pong.html  pong.js
include/: app_state.h  apprt.h  canvas.h  color.h  color_picker.h  context.h  defs.h  draw_tools.h  editor_tool.h  entity.h  event.h  file.h  graphics.h  grid_context.h  init.h  input.h  js_api.h  message_queue.h  palette.h  pixel_buffer.h  sprite_editor.h  sprite_picker.h  sprite_sheet.h  spritely.h  state.h  util.h
spits/: hello_world.spit
src/: app_state.c  app_state.h  apprt.c  canvas.c  canvas.h  color.c  color_picker.c  color_picker.h  colors.c  colors.h  context.c  context.h  defs.h  draw_tools.c  draw_tools.h  editor_tool.c  entity.c  entity.h  event.c  file.c  file.h  globals.c  globals.h  graphics.c  grid_context.c  init.c  init.h  input.c  input.h  js_api.c  js_api.h  main.c  main.h  message_queue.c  message_queue.h  palette.c  pixel.h  pixel_buffer.c  python_api.c  python_api.h  (+14 more)
src/modules/: graphics.zig
web/: .gitignore  README.md  example.js  index.html  spritely.js
